@@ -4,6 +4,7 @@ Revision history for Path-Class-Tiny
 
     [New Features]
     * `tempfile` works now, and is exported
+    * `dirname` is now just an alias for `parent`
 
 0.04      2018-07-23 03:34:07-07:00 America/Los_Angeles
 
